add filter by number of publication

--- a/network_analysis.ipynb
+++ b/network_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -38,144 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>full_name</th>\n",
-       "      <th>pi_key</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>middle_name</th>\n",
-       "      <th>last_initial</th>\n",
-       "      <th>first_initial</th>\n",
-       "      <th>middle_initial</th>\n",
-       "      <th>is_study</th>\n",
-       "      <th>is_comp</th>\n",
-       "      <th>project_key</th>\n",
-       "      <th>publication_key</th>\n",
-       "      <th>AFFILIATION</th>\n",
-       "      <th>AUTHOR_LIST</th>\n",
-       "      <th>COUNTRY</th>\n",
-       "      <th>ISSN</th>\n",
-       "      <th>JOURNAL_ISSUE</th>\n",
-       "      <th>JOURNAL_TITLE</th>\n",
-       "      <th>JOURNAL_TITLE_ABBR</th>\n",
-       "      <th>JOURNAL_VOLUME</th>\n",
-       "      <th>LANG</th>\n",
-       "      <th>PAGE_NUMBER</th>\n",
-       "      <th>PMC_ID</th>\n",
-       "      <th>PMID</th>\n",
-       "      <th>PUB_DATE</th>\n",
-       "      <th>PUB_TITLE</th>\n",
-       "      <th>PUB_YEAR</th>\n",
-       "      <th>is_author</th>\n",
-       "      <th>PI_IDS</th>\n",
-       "      <th>PI_NAMEs</th>\n",
-       "      <th>CORE_PROJECT_NUM</th>\n",
-       "      <th>FY</th>\n",
-       "      <th>ADMINISTERING_IC</th>\n",
-       "      <th>TOTAL_COST</th>\n",
-       "      <th>TOTAL_COST_SUB_PROJECT</th>\n",
-       "      <th>ACTIVITY</th>\n",
-       "      <th>FUNDING_MECHANISM</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>gao, jiali</td>\n",
-       "      <td>nih_1898316</td>\n",
-       "      <td>gao</td>\n",
-       "      <td>jiali</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>g</td>\n",
-       "      <td>j</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>R01GM046736</td>\n",
-       "      <td>16231943.0</td>\n",
-       "      <td>Department of Chemistry and Supercomputer Inst...</td>\n",
-       "      <td>Pu, Jingzhi; Ma, Shuhua; Garcia-Viloca, Mireia...</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>0002-7863</td>\n",
-       "      <td>42</td>\n",
-       "      <td>Journal of the American Chemical Society</td>\n",
-       "      <td>J Am Chem Soc</td>\n",
-       "      <td>127</td>\n",
-       "      <td>ENG</td>\n",
-       "      <td>14879-86</td>\n",
-       "      <td>4477101.0</td>\n",
-       "      <td>16231943.0</td>\n",
-       "      <td>2005 Oct 26</td>\n",
-       "      <td>Nonperfect synchronization of reaction center ...</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1898316;</td>\n",
-       "      <td>GAO, JIALI;</td>\n",
-       "      <td>R01GM046736</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>GM</td>\n",
-       "      <td>195300.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>R01</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    full_name       pi_key last_name first_name middle_name last_initial  \\\n",
-       "0  gao, jiali  nih_1898316       gao      jiali         NaN            g   \n",
-       "\n",
-       "  first_initial middle_initial  is_study  is_comp  project_key  \\\n",
-       "0             j            NaN         1        0  R01GM046736   \n",
-       "\n",
-       "   publication_key                                        AFFILIATION  \\\n",
-       "0       16231943.0  Department of Chemistry and Supercomputer Inst...   \n",
-       "\n",
-       "                                         AUTHOR_LIST        COUNTRY  \\\n",
-       "0  Pu, Jingzhi; Ma, Shuhua; Garcia-Viloca, Mireia...  United States   \n",
-       "\n",
-       "        ISSN JOURNAL_ISSUE                             JOURNAL_TITLE  \\\n",
-       "0  0002-7863            42  Journal of the American Chemical Society   \n",
-       "\n",
-       "  JOURNAL_TITLE_ABBR JOURNAL_VOLUME LANG PAGE_NUMBER     PMC_ID        PMID  \\\n",
-       "0      J Am Chem Soc            127  ENG    14879-86  4477101.0  16231943.0   \n",
-       "\n",
-       "      PUB_DATE                                          PUB_TITLE  PUB_YEAR  \\\n",
-       "0  2005 Oct 26  Nonperfect synchronization of reaction center ...    2005.0   \n",
-       "\n",
-       "  is_author    PI_IDS     PI_NAMEs CORE_PROJECT_NUM    FY ADMINISTERING_IC  \\\n",
-       "0      True  1898316;  GAO, JIALI;      R01GM046736  2001               GM   \n",
-       "\n",
-       "   TOTAL_COST  TOTAL_COST_SUB_PROJECT ACTIVITY FUNDING_MECHANISM  \n",
-       "0    195300.0                     0.0      R01               NaN  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "study_pub.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -257,8 +120,29 @@
     "            pmid.append(vals[i, 1])\n",
     "df_net = pd.DataFrame({'authors': authors, 'pmid': pmid, 'group': group})\n",
     "df_net = df_net[df_net.authors != 'nan']\n",
-    "df_net.to_csv('../data/net_raw.csv', index=False, header=True)\n",
-    "df.columns"
+    "df_net.to_csv('../data/net_raw.csv', index=False, header=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(382676, 3)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_net.shape"
    ]
   },
   {
@@ -294,7 +178,7 @@
     "df_comp_gr = df_comp[['authors', 'group']]\n",
     "df_comp_gr = df_comp_gr.drop_duplicates()\n",
     "df_comp_gr.columns = ['Id', 'Group']\n",
-    "df_group.to_csv('../data/nodes_gephi.csv', header=True)\n",
+    "df_group.to_csv('../data/all_nodes_gephi.csv', header=True)\n",
     "df_study_gr.to_csv('../data/study_nodes_gephi.csv', header=True)\n",
     "df_comp_gr.to_csv('../data/comp_nodes_gephi.csv', header=True)\n",
     "\n"
@@ -356,6 +240,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#full network take 3-4 hours to run\n",
+    "all_edges, all_pmid = getEdges(df_net)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {
     "collapsed": false
@@ -412,154 +308,29 @@
    "outputs": [],
    "source": [
     "createGraphCsv(study_edges, study_pmid, 'study_edges')\n",
-    "createGraphCsv(comp_edges, comp_pmid, 'comp_edges')"
+    "createGraphCsv(comp_edges, comp_pmid, 'comp_edges')\n",
+    "createGraphCsv(all_edges, all_pmid, 'all_edges')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>full_name</th>\n",
-       "      <th>pi_key</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>middle_name</th>\n",
-       "      <th>last_initial</th>\n",
-       "      <th>first_initial</th>\n",
-       "      <th>middle_initial</th>\n",
-       "      <th>is_study</th>\n",
-       "      <th>is_comp</th>\n",
-       "      <th>project_key</th>\n",
-       "      <th>publication_key</th>\n",
-       "      <th>AFFILIATION</th>\n",
-       "      <th>AUTHOR_LIST</th>\n",
-       "      <th>COUNTRY</th>\n",
-       "      <th>ISSN</th>\n",
-       "      <th>JOURNAL_ISSUE</th>\n",
-       "      <th>JOURNAL_TITLE</th>\n",
-       "      <th>JOURNAL_TITLE_ABBR</th>\n",
-       "      <th>JOURNAL_VOLUME</th>\n",
-       "      <th>LANG</th>\n",
-       "      <th>PAGE_NUMBER</th>\n",
-       "      <th>PMC_ID</th>\n",
-       "      <th>PMID</th>\n",
-       "      <th>PUB_DATE</th>\n",
-       "      <th>PUB_TITLE</th>\n",
-       "      <th>PUB_YEAR</th>\n",
-       "      <th>is_author</th>\n",
-       "      <th>PI_IDS</th>\n",
-       "      <th>PI_NAMEs</th>\n",
-       "      <th>CORE_PROJECT_NUM</th>\n",
-       "      <th>FY</th>\n",
-       "      <th>ADMINISTERING_IC</th>\n",
-       "      <th>TOTAL_COST</th>\n",
-       "      <th>TOTAL_COST_SUB_PROJECT</th>\n",
-       "      <th>ACTIVITY</th>\n",
-       "      <th>FUNDING_MECHANISM</th>\n",
-       "      <th>author_name</th>\n",
-       "      <th>author_name_no_mi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1726</th>\n",
-       "      <td>gibbs, richard a</td>\n",
-       "      <td>nih_1898145</td>\n",
-       "      <td>gibbs</td>\n",
-       "      <td>richard</td>\n",
-       "      <td>a</td>\n",
-       "      <td>g</td>\n",
-       "      <td>r</td>\n",
-       "      <td>a</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>U54HG003273</td>\n",
-       "      <td>15057822.0</td>\n",
-       "      <td>Human Genome Sequencing Center, Department of ...</td>\n",
-       "      <td>Gibbs, Richard A; Weinstock, George M; Metzker...</td>\n",
-       "      <td>England</td>\n",
-       "      <td>0028-0836</td>\n",
-       "      <td>6982</td>\n",
-       "      <td>Nature</td>\n",
-       "      <td>Nature</td>\n",
-       "      <td>428</td>\n",
-       "      <td>ENG</td>\n",
-       "      <td>493-521</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15057822.0</td>\n",
-       "      <td>2004 Apr 1</td>\n",
-       "      <td>Genome sequence of the Brown Norway rat yields...</td>\n",
-       "      <td>2004.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1898145;</td>\n",
-       "      <td>GIBBS, RICHARD A;</td>\n",
-       "      <td>U54HG003273</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>HG</td>\n",
-       "      <td>500000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>U54</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Gibbs, Richard A</td>\n",
-       "      <td>Gibbs, Richard</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             full_name       pi_key last_name first_name middle_name  \\\n",
-       "1726  gibbs, richard a  nih_1898145     gibbs    richard           a   \n",
-       "\n",
-       "     last_initial first_initial middle_initial  is_study  is_comp  \\\n",
-       "1726            g             r              a         0        1   \n",
-       "\n",
-       "      project_key  publication_key  \\\n",
-       "1726  U54HG003273       15057822.0   \n",
-       "\n",
-       "                                            AFFILIATION  \\\n",
-       "1726  Human Genome Sequencing Center, Department of ...   \n",
-       "\n",
-       "                                            AUTHOR_LIST  COUNTRY       ISSN  \\\n",
-       "1726  Gibbs, Richard A; Weinstock, George M; Metzker...  England  0028-0836   \n",
-       "\n",
-       "     JOURNAL_ISSUE JOURNAL_TITLE JOURNAL_TITLE_ABBR JOURNAL_VOLUME LANG  \\\n",
-       "1726          6982        Nature             Nature            428  ENG   \n",
-       "\n",
-       "     PAGE_NUMBER  PMC_ID        PMID    PUB_DATE  \\\n",
-       "1726     493-521     NaN  15057822.0  2004 Apr 1   \n",
-       "\n",
-       "                                              PUB_TITLE  PUB_YEAR is_author  \\\n",
-       "1726  Genome sequence of the Brown Norway rat yields...    2004.0      True   \n",
-       "\n",
-       "        PI_IDS           PI_NAMEs CORE_PROJECT_NUM    FY ADMINISTERING_IC  \\\n",
-       "1726  1898145;  GIBBS, RICHARD A;      U54HG003273  2004               HG   \n",
-       "\n",
-       "      TOTAL_COST  TOTAL_COST_SUB_PROJECT ACTIVITY FUNDING_MECHANISM  \\\n",
-       "1726    500000.0                     0.0      U54               NaN   \n",
-       "\n",
-       "           author_name author_name_no_mi  \n",
-       "1726  Gibbs, Richard A    Gibbs, Richard  "
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_pub[all_pub['PMID'] == 15057822.0]"
+    "#add Funding Activity R01...\n",
+    "study_edges = pd.read_csv('../data/study_edges.csv', header=0)\n",
+    "activities = all_pub[['PMID','ACTIVITY']]\n",
+    "study_edges = study_edges.merge(activities, left_on='Label', right_on='PMID', how='left')\n",
+    "study_edges.to_csv('../data/study_edges.csv', index=False, header=True)\n",
+    "comp_edges = pd.read_csv('../data/comp_edges.csv', header=0)\n",
+    "comp_edges = comp_edges.merge(activities, left_on='Label', right_on='PMID', how='left')\n",
+    "comp_edges.to_csv('../data/comp_edges.csv', index=False, header=True)\n",
+    "all_edges = pd.read_csv('../data/all_edges.csv', header=0)\n",
+    "all_edges = all_edges.merge(activities, left_on='Label', right_on='PMID', how='left')\n",
+    "all_edges.to_csv('../data/all_edges.csv', index=False, header=True)"
    ]
   },
   {
